# arduino-playground

./: .gitignore  Makefile  enclosure.FCStd  enclosure.FCStd1  link_libs.sh  scratch.cpp  tools.FCStd
CommonMessaging/: CommonMessaging.cpp  CommonMessaging.h
Components/: Components.cpp  Components.h
DataStructures/: DataStructures.h
PCBs/catan/: catan.kicad_pcb  catan.pro  catan.sch
PCBs/power/: power.kicad_pcb  power.sch
PCBs/router/: router.kicad_pcb  router.pro  router.sch
PathFinder/: PathFinder.cpp  PathFinder.h
arduino-playground-client/: .gitignore  CHANGELOG.md  README.md  project.clj
arduino-playground-client/doc/: intro.md
arduino-playground-client/src/arduino_playground_client/: catan.clj  comm.clj  core.clj  draw.clj  hex_graph.clj  utils.clj
arduino-playground-client/test/arduino_playground_client/: core_test.clj
catan_node/: catan_node.ino  components.cpp  components.h  modes.cpp  modes.h
component_tester/: component_tester.ino  modes.cpp  modes.h
controller-check/: controller-check.ino
eeprom-clear/: eeprom-clear.ino
helpers/: pyproject.toml  requirements.txt  serialcom.py  start_discovery.py
network/: network.ino
network_tester/: network_tester.ino
pathfinder/: pathfinder.ino
pathfinder-i2c/: pathfinder-i2c.ino
pathfinder_tester/: pathfinder_tester.ino
router/: components.cpp  components.h  messaging.cpp  messaging.h  router.ino  scratch.cpp  structures.h
serial_comm_tester/: serial_comm_tester.ino
set-id/: set-id.ino
tools/: bulk_make.sh  bulk_set_id.sh  eeprom_clear_wait.py  sketch_complete_wait.py
(+3 files in other folders)
