[tool.poetry]
name = "helpers"
version = "0.1.0"
description = ""
authors = ["Greg Meltzer <gregory.m.meltzer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
black = "^23.12.1"
pyserial = "^3.5"
click = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
